force-app/main/default/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employed_By__c</fullName>
        <label>Employed By</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Employee (Employed By)</relationshipLabel>
        <relationshipName>Employee_Company</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Working_For__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Working For</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employed_By__c</columns>
        <columns>Age__c</columns>
        <columns>Salary__c</columns>
        <columns>Experience__c</columns>
        <columns>Working_For__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>